about_us_go/k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golang-deployment
spec:
  selector:
    matchLabels:
      app: wedding-golang-backend
  template:
    metadata:
      labels:
        app: wedding-golang-backend
    spec:
      containers:
      - name: wedding-golang-backend
        image: wedding-aboutus-go
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
