about_us_go/k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-aboutus-go-svc
spec:
  selector:
    app: wedding-golang-backend
  ports:
  - port: 80
    targetPort: 8080
