about_us_go/k8s/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aboutus-ingress
  labels:
    name: aboutus-ingress
  annotations:
    kubernetes.io/ingress.class: ambassador
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/aboutus/"
        backend:
          service:
            name: wedding-aboutus-go-svc
            port: 
              number: 80
